--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^9.0.0",
