--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "prod": "SET NODE_ENV=production&& nodemon app.js",
+    "dev": "SET NODE_ENV=development&& nodemon app.js",
     "build": "webpack"
   },
   "keywords": [],
