--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "webpack": "^5.79.0",
